css/movie-detail.css
.back_btn {
    background: var(--primary-color);
    color: var(--secondary-color);
    font-size: 14px;
    border: none;
    border-radius: 3px;
    padding: 6px 15px;
    cursor: pointer;
}

.movie_info_panel {
    /* display: none; */
    display: grid;
    grid-template-columns: 40% 1fr;
    padding: 40px 20px;
    border-radius: 30px;
}

.poster_container {
    background-color: transparent;
    /* background-image: url(../assets/batman-poster.jpg); */
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 600px;
    border-radius: 30px;
}

.movie_info_container {
    background-color: transparent;
    padding: 40px;
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: start;
    justify-content: start;
}

.movie_info_container h1 {
    font-weight: 400;
    margin-bottom: 15px;
}

.movie_info_container h1 span#movie-title{
    margin-right: 8px;
}

.movie_info_container p strong {
    font-weight: 600;
}

@media (max-width: 400px) {

    .movie_info_panel {
        grid-template-columns: 1fr;
    }

    .poster_container {
        min-height: 400px;
    }

    .movie_info_container {
        padding: 30px 10px;
    }

    .movie_info_container h1 {
        font-size: 22px;
    }
}

